# connectome

./: CMakeLists.txt  README.md  THINGS TO DO  connectome.csv  main.cpp  nodehosts  notes  postsynaptic.csv  ring.cpp  synapse.cpp  synapse.h
